--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -7,27 +7,27 @@ header:
 sections:
   - section:
     title:
-      title: Aux and Digytle, Ahead of Our Time
+      title: Talent Scouting & Nurseries
       colour: "#EF233C"
     text:
-      - When T.E. Shaw co-founded Aux in 2013, he was based in Germany with one of the co-founders in Canada and the other in Bulgaria.
-      - In addition to that Aux has never had defined C-level roles. The three co-founders take decisions unnanimously and share the workload as needed.
-      - When Charie Cox and Aux co-founded Digytle in London in 2020 they followed the same distributed route, building on Aux' successful and harmoneous model, adding a lovely British flavour.
-      - For this reason when T.E. Shaw saw Distributed Leadership and Digital Innovation, he "Bang! That's what we have been doing for years!". And he made it his mission to meet Caterina Maniscalco, which he eventually did in the early 2020.
-      - Caterina and T.E. hit it off and decided that their deep understanding of their share values, both in practical and highly descriptive way, are a nice base for a long and productive cooperation. So Caterina joined Digytle and Digytle adopted Caterina's book.
+      - When T.E. Shaw has been discovering and nursing talent for more than 40 years.
+      - The executive talent is among of the most underreated types of talent.
+      - Executives are expected to be strong, to know it all, to manage and survive. And they should.
+      - But not without help.
+      - "T.E.'s concise style of nursing helps executives understand the world around them and be more successful."
   - section:
     title:
-      title: A Seminal Work
+      title: Scratch-like
       colour: "#EF233C"
     text:
-      - Caterina Maniscalco's book is rich in scientific research.
-      - It not only informs, instructs and inspires, but also convinces.
+      - MIT Scratch is a methaphore.
+      - Another mathaphores are the sail of the ship.
       - Reading it, T.E. felt many direct comparison to his journey with Aux and Digytle, reinforcing all the benefits he had found working in close partnerships with shared roles and distant locations.
   - section:
     image:
       url: ../assets/book-img.png
       title: Solid Science
-      description: Written like a PhD, the book has the rare power to instruct and convince.
+      description: The triangle front sail of the ship is attached at three points. When these points are the right ones, the sail is full of wind and the ship sails.
       colour: "#EF233C"
   - section:
     title:
