--- a/content/featurettes.yaml
+++ b/content/featurettes.yaml
@@ -4,7 +4,7 @@ features:
 - name: Distributed Leadership and Digital Innovation
   description: 'A book before its time: Distributed Leadership and Digital Innovation is even more current now, when we are locked away and cannot meet, but has power to carry you beyond.'
   image: assets/book.featurette.png
-  link: leadership
+  link: distributed-leadership-and-digital-innovation-by-caterina-maniscalco
   template: featurettes
 - name: Conversational Bots
   description: Blits.ai is a conversational bot.
