--- a/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
+++ b/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
@@ -10,14 +10,14 @@ sections:
       title: Aux and Digytle, Ahead of Our Time
       colour: "#EF233C"
     text:
-      - When T.E. Shaw co-founded Aux in 2013, he was based in Germany with one of the co-founders in Canada and the other in Bulgaria.
-      - In addition to that Aux has never had defined C-level roles. The three co-founders take decisions unnanimously and share the workload as needed.
-      - When Charie Cox and Aux co-founded Digytle in London in 2020 they followed the same distributed route, building on Aux' successful and harmoneous model, adding a lovely British flavour.
-      - For this reason when T.E. Shaw saw Distributed Leadership and Digital Innovation, he "Bang! That's what we have been doing for years!". And he made it his mission to meet Caterina Maniscalco, which he eventually did in the early 2020.
-      - Caterina and T.E. hit it off and decided that their deep understanding of their share values, both in practical and highly descriptive way, are a nice base for a long and productive cooperation. So Caterina joined Digytle and Digytle adopted Caterina's book.
+      - When T.E. Shaw co-founded Aux in 2013 with 2 partners the workload was distributed in what felt a very natural way with all major decision making a shared event and then other work distrubted in accordence to each partners natural strengths and passions.
+      - This even and harmonious partnering style has certainly platyed a great part in Aux's continuing success and we have never really needed defined C-level roles. So when T.E. Shaw saw Distributed Leadership and Digital Innovation, he thought "That's what we have been doing for years!". And he made it one of his missions to meet the author Caterina Maniscalco, which he eventually did in the early 2020.
+      - Caterina blurb
+      - When Charie Cox and T.E. Shaw co-founded Digytle in London in 2020 it felt only natural that they followed the same distributed route, with this time Aux being the third partner, adding British flavour to the Aux family and further developing their UK exposure.
+      - With T.E. Shaw being based in Germany with one of the co-founders in Canada and the other in Bulgaria, Aux had already leaned heavily on technology make those distances and remote working technology and supporting systems work so, even though the system works very effeciently, Aux is in continious cycle of Digital Innovation as we adopt new processes!  
   - section:
     title:
-      title: A Seminal Work
+      title: A Seminal Book for Digital Innovators 
       colour: "#EF233C"
     text:
       - Caterina Maniscalco's book is rich in scientific research.
@@ -36,7 +36,7 @@ sections:
   - section:
     text:
       - Caterina was born in New York and spent the last 20 years consulting digitle strategy.
-      - Caterina is one of the Digytle partners, an elite guild.
+      - Caterina is one of our Digytle partners, our highly specialist assemble of digital innovators, specialists and partner organisations.
       - Caterina is available as a consultant, lecturer and speaker.
     quote:
       colour: "#6E44FF"
