--- a/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
+++ b/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
@@ -20,8 +20,8 @@ sections:
       title: A Seminal Book for Digital Innovators 
       colour: "#EF233C"
     text:
-      - Caterina Maniscalco's book is rich in scientific research.
-      - It not only informs, instructs and inspires, but also convinces.
+      - So it was his passion for digtal innovation and his natural interest in distributed leadership that brought T.E. Shaw to Caterina Maniscalco's book. 
+      - It not only informs, instructs and inspires, but also convinces and is rich in both scientific research and real life examples of distributed leadership giving compaies the edge in highly competitive spaces.
       - Reading it, T.E. felt many direct comparison to his journey with Aux and Digytle, reinforcing all the benefits he had found working in close partnerships with shared roles and distant locations.
   - section:
     image:
