--- a/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
+++ b/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
@@ -12,7 +12,7 @@ sections:
     text:
       - When T.E. Shaw co-founded Aux in 2013 with 2 partners the workload was distributed in what felt a very natural way with all major decision making a shared event and then other work distrubted in accordence to each partners natural strengths and passions.
       - This even and harmonious partnering style has certainly platyed a great part in Aux's continuing success and we have never really needed defined C-level roles. So when T.E. Shaw saw Distributed Leadership and Digital Innovation, he thought "That's what we have been doing for years!". And he made it one of his missions to meet the author Caterina Maniscalco, which he eventually did in the early 2020.
-      - **** Caterina biography snippet ****
+      - Caterina biography snippet 
       - When Charie Cox and T.E. Shaw co-founded Digytle in London in 2020 it felt only natural that they followed the same distributed route, with this time Aux being the third partner, adding British flavour to the Aux family and further developing their UK exposure.
       - With T.E. Shaw being based in Germany with one of the co-founders in Canada and the other in Bulgaria, Aux had already leaned heavily on technology make those distances and remote working technology and supporting systems work so, even though the system works very effeciently, Aux is in continious cycle of Digital Innovation as we adopt new processes!  
   - section:
@@ -35,7 +35,7 @@ sections:
       colour: "#EF233C"
   - section:
     text:
-      - Caterina was born in New York and spent the last 20 years consulting digitle strategy. ******Long form biography of her choice ****
+      - Caterina was born in New York and spent the last 20 years consulting digitle strategy. Long form biography of her choice 
       - Caterina is one of our Digytle partners, our highly specialist assemble of digital innovators, specialists and partner organisations.
       - Caterina is available as a consultant, lecturer and speaker.
     quote:
