--- a/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
+++ b/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
@@ -3,7 +3,7 @@ header:
   title:
     title: Distributed Leadership and Digital Innovation
     colour: "#EF233C"
-    description: T. E. Shaw of Digytle discovered Distributed Learership and Digital Innovation and met the author Caerina Maniscalco.
+    description: T. E. Shaw of Digytle discovered Distributed Learership and Digital Innovation and met the author Caterina Maniscalco.
 sections:
   - section:
     title:
@@ -13,7 +13,7 @@ sections:
       - When T.E. Shaw co-founded Aux in 2013 with 2 partners the workload was distributed in what felt a very natural way with all major decision making a shared event and then other work distrubted in accordence to each partners natural strengths and passions.
       - This even and harmonious partnering style has certainly platyed a great part in Aux's continuing success and we have never really needed defined C-level roles. So when T.E. Shaw saw Distributed Leadership and Digital Innovation, he thought "That's what we have been doing for years!". And he made it one of his missions to meet the author Caterina Maniscalco, which he eventually did in the early 2020.
       - Caterina biography snippet 
-      - When Charie Cox and T.E. Shaw co-founded Digytle in London in 2020 it felt only natural that they followed the same distributed route, with this time Aux being the third partner, adding British flavour to the Aux family and further developing their UK exposure.
+      - When Charlie Cox and T.E. Shaw co-founded Digytle in London in 2020 it felt only natural that they followed the same distributed route, with this time Aux being the third partner, adding British flavour to the Aux family and further developing their UK exposure.
       - With T.E. Shaw being based in Germany with one of the co-founders in Canada and the other in Bulgaria, Aux had already leaned heavily on technology make those distances and remote working technology and supporting systems work so, even though the system works very effeciently, Aux is in continious cycle of Digital Innovation as we adopt new processes!  
   - section:
     title:
@@ -23,6 +23,7 @@ sections:
       - So it was his passion for digtal innovation and his natural interest in distributed leadership that brought T.E. Shaw to Caterina Maniscalco's book. 
       - It not only informs, instructs and inspires, but also convinces and is rich in both scientific research and real life examples of distributed leadership giving compaies the edge in highly competitive spaces.
       - Reading it, T.E. felt many direct comparison to his journey with Aux and Digytle, reinforcing all the benefits he had found working in close partnerships with shared roles and distant locations.
+      - Thomas    Maybe an example of a lesson learned from book or your experience of dist lead.
   - section:
     image:
       url: ../assets/book-img.png
@@ -36,7 +37,7 @@ sections:
   - section:
     text:
       - Caterina was born in New York and spent the last 20 years consulting digitle strategy. Long form biography of her choice 
-      - Caterina is one of our Digytle partners, our highly specialist assemble of digital innovators, specialists and partner organisations.
+      - Caterina is one of our Digytle Partners, our highly specialist assemble of digital innovators, specialists and partner organisations.
       - Caterina is available as a consultant, lecturer and speaker.
     quote:
       colour: "#6E44FF"
