--- a/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
+++ b/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
@@ -14,7 +14,7 @@ sections:
       - This even handed and harmonious partnering style has certainly played a great part in Aux's continuing success and we have never really needed defined C-level roles. So when T.E. Shaw saw the book Distributed Leadership and Digital Innovation, he realised "This is what we have been doing for years!" And after reading he was impressed enough to make it one of his missions to meet its author Caterina Maniscalco, which he eventually did in the early 2020.
       - Caterina biography snippet 
       - When Charlie Cox and T.E. Shaw co-founded Digytle in London in 2020 it felt only natural that they followed the same distributed route, with this time Aux itself being the third partner, adding British flavour to the Aux family and further developing their UK exposure.
-      - With T.E. Shaw being based in Germany with one of the co-founders in Canada and the other in Bulgaria, Aux had already leaned heavily on technology make those distances and remote working technology and supporting systems work so, even though the system works very effeciently, Aux is in continious cycle of Digital Innovation as we adopt new processes!  
+      - With T.E. Shaw being based in Germany with one co-founder in Canada and the other in Bulgaria, Aux had already leaned heavily on technology make those distances feel smaller and woven remote working and collaboration solutions seemlessly into our day to day operations, we are also seeking to improve and expand our offering  so are in continious cycle of Digital Innovation!  
   - section:
     title:
       title: A Seminal Book for Digital Innovators 
@@ -37,7 +37,7 @@ sections:
   - section:
     text:
       - Caterina was born in New York and spent the last 20 years consulting digitle strategy. Long form biography of her choice 
-      - Caterina is one of our Digytle Partners, our highly specialist assemble of digital innovators, specialists and partner organisations.
+      - Caterina is one of our Digytle Partners, our highly specialised assemble of digital leaders and innovators as well as trusted partner organisations.
       - Caterina is available as a consultant, lecturer and speaker.
     quote:
       colour: "#6E44FF"
