--- a/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
+++ b/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
@@ -12,9 +12,8 @@ sections:
     text:
       - When T.E. Shaw founded Aux in 2013 with 2 partners the workload with his co-founders was distributed in what felt a very natural way, with all major decision making a shared event and then other work distrubted in accordence to each partners natural strengths and passions.
       - This even handed and harmonious partnering style has certainly played a great part in Aux's continuing success and we have never really needed defined C-level roles. So when T.E. Shaw saw the book Distributed Leadership and Digital Innovation, he realised "This is what we have been doing for years!" After reading he was so impressed he make it one of his missions to meet its author Caterina Maniscalco, which he eventually did in the early 2020.
-      - Caterina biography snippet 
       - With T.E. Shaw being based in Germany with one co-founder in Canada and the other in Bulgaria, Aux had already leaned heavily on technology make those distances feel smaller and woven remote working and collaboration solutions seemlessly into our day to day operations, we are also seeking to improve and expand our offering  so are in continious cycle of Digital Innovation!  
-      - - When Charlie Cox and T.E. Shaw co-founded Digytle in London in 2020 it felt only natural that they followed the same distributed route, with this time Aux itself being the third partner, adding British flavour to the Aux family and further developing their UK exposure.
+      - When Charlie Cox and T.E. Shaw co-founded Digytle in London in 2020 it felt only natural that they followed the same distributed route, with this time Aux itself being the third partner, adding British flavour to the Aux family and further developing their UK exposure.
   - section:
     title:
       title: A Seminal Book for Digital Innovators 
