--- a/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
+++ b/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
@@ -22,7 +22,7 @@ sections:
       - So it was his passion for digital innovation and his natural interest in distributed leadership that brought T.E. Shaw to Caterina Maniscalco's book. 
       - It not only informs, instructs and inspires, but also convinces and is rich in both scientific research and real life examples of distributed leadership giving companies the edge in highly competitive spaces.
       - Reading it, T.E. felt many direct comparisons to his journey with Aux and Digytle, reinforcing all the benefits he had found working in close partnerships with shared roles and distant locations.
-      - Thomas    Maybe an example of a lesson learned from book or your experience of dist lead.
+      - Thomas, maybe an example of a lesson learned from book or your experience of dist lead.
   - section:
     image:
       url: ../assets/book-img.png
