--- a/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
+++ b/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
@@ -41,7 +41,7 @@ sections:
     quote:
       colour: "#6E44FF"
       bigQuotes: ../assets/big_quotes.svg
-      text: "The book inspired me and showed me ways to lead and do business, good for distributed contexts such as those enforced by a global pandemic."
+      text: "No man will make a great leader who wants to do it all himself, or to get all the credit for doing it."
       smallQuotes: ../assets/small_quotes.svg
 action:
   text:
