--- a/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
+++ b/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
@@ -9,6 +9,13 @@ sections:
     title:
       title: Aux and Digytle, Ahead of Our Time
       colour: "#EF233C"
+  - section:
+    quote:
+      colour: "#6E44FF"
+      bigQuotes: ../assets/big_quotes.svg
+      text: "No man will make a great leader who wants to do it all himself, or to get all the credit for doing it."
+      smallQuotes: ../assets/small_quotes.svg
+  - section:
     text:
       - When T.E. Shaw founded Aux in 2013 with 2 partners the workload with his co-founders was distributed in what felt a very natural way, with all major decision making a shared event and then other work distributed in accordance to each partners natural strengths and passions.
       - This even handed and harmonious partnering style has certainly played a great part in Aux's continuing success and we have never really needed defined C-level roles. So when T.E. Shaw saw the book Distributed Leadership and Digital Innovation, he realised "This is what we have been doing for years!" After reading he was so impressed he made it one of his missions to meet its author Caterina Maniscalco, which he eventually did in early 2020.
@@ -38,11 +45,6 @@ sections:
       - Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice 
       - Caterina is one of our Digytle Partners, our highly specialised assemble of digital leaders and innovators as well as trusted partner organisations.
       - Caterina is available as a consultant, lecturer and speaker.
-    quote:
-      colour: "#6E44FF"
-      bigQuotes: ../assets/big_quotes.svg
-      text: "No man will make a great leader who wants to do it all himself, or to get all the credit for doing it."
-      smallQuotes: ../assets/small_quotes.svg
 action:
   text:
     question: Would you like to read the book?
