--- a/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
+++ b/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
@@ -17,6 +17,7 @@ sections:
       smallQuotes: ../assets/small_quotes.svg
   - section:
     text:
+      - A sentence could not have been more true. The Talent scout T.E. Shaw had wanted to create a company, where he could nurse the scouted talent—for a very long time. But something was missing.
       - When T.E. Shaw founded Aux in 2013 with 2 partners the workload with his co-founders was distributed in what felt a very natural way, with all major decision making a shared event and then other work distributed in accordance to each partners natural strengths and passions.
       - This even handed and harmonious partnering style has certainly played a great part in Aux's continuing success and we have never really needed defined C-level roles. So when T.E. Shaw saw the book Distributed Leadership and Digital Innovation, he realised "This is what we have been doing for years!" After reading he was so impressed he made it one of his missions to meet its author Caterina Maniscalco, which he eventually did in early 2020.
       - With T.E. Shaw being based in Germany with one co-founder in Canada and the other in Bulgaria, Aux had already leaned heavily on technology make those distances feel smaller and woven remote working and collaboration solutions seamlessly into our day to day operations, we are also seeking to improve and expand our offering so are in continuous cycle of Digital Innovation.  
