--- a/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
+++ b/content/featurettes/distributed-leadership-and-digital-innovation-by-caterina-maniscalco.yaml
@@ -46,6 +46,12 @@ sections:
       - Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice 
       - Caterina is one of our Digytle Partners, our highly specialised assemble of digital leaders and innovators as well as trusted partner organisations.
       - Caterina is available as a consultant, lecturer and speaker.
+  - section:
+    imageWide:
+      url: ../assets/the-crew.png
+      title: Solid Science
+      description: Written like a PhD, the book has the rare power to instruct and convince.
+      colour: "#EF233C"
 action:
   text:
     question: Would you like to read the book?
