--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -48,5 +48,5 @@ action:
     background: 
   buttons:
     - button:
-      link: https://www.amazon.com/Distributed-Leadership-Digital-Innovation-Management/dp/0367361485/ref=sr_1_31?keywords=innovation&qid=1573320208&refinements=p_n_publication_date%3A1250228011&s=books&sr=1-31
-      image: ../assets/amazon.png
+      link: https://calendly.com/
+      image: ../assets/calendly.png
