--- a/content/work.yaml
+++ b/content/work.yaml
@@ -8,7 +8,7 @@ big:
   # TODO
   # remove
   template: featurettes
-  link: blits
+  link: auxta
 # TODO
 # rename to left: and see why does it repeat
 left:
