--- a/content/featurettes.yaml
+++ b/content/featurettes.yaml
@@ -4,20 +4,20 @@ features:
 - name: Distributed Leadership and Digital Innovation
   description: 'A book before its time: Distributed Leadership and Digital Innovation is even more current now, when we are locked away and cannot meet, but has power to carry you beyond.'
   image: assets/book.featurette.png
-  link: distributed-leadership-and-digital-innovation-by-caterina-maniscalco
   template: featurettes
+  link: distributed-leadership-and-digital-innovation-by-caterina-maniscalco
 - name: Conversational Bots
   description: Blits.ai is a conversational bot.
   image: assets/bot.featurette.png
-  link: conversational-chatbots
   template: featurettes
+  link: conversational-chatbots
 - name: Coding for Executives
   description: 'Software developers are required to think business, but can Executives think code? In between one and three fun sessions, Scratch for Executives will help you open your mind and reach the Holy Graal of collaboration: empathy.'
   image: assets/code.featurettes.png
-  link: scratch-for-executives
   template: featurettes
+  link: scratch-for-executives
 - name: Automated Deep Quality And Compliance Monitoring
   description: We offer peace of mind.
   image: assets/ta.featurette.png
-  link: learn-more
   template: featurettes
+  link: automation-of-quality
