--- a/content/work.yaml
+++ b/content/work.yaml
@@ -21,7 +21,7 @@ left:
   description: A complex marketplace for informing, educating, preparing and matching players in the green energy marketplace, as well as providing them with rich data and tools for and beyond the matchmaking.
   image: assets/sbf.png
   template: featurettes
-  link: sbf
+  link: blits-conversational-bots-management-ecosystem
 # TODO
 # rename to right: 
 right:
@@ -29,14 +29,14 @@ right:
   description: A complex marketplace for informing, educating SMES, and helping them prepare and choose a financing product.
   image: assets/blits.png
   template: featurettes
-  link: blits
+  link: stichting-bedrijfsfinanciering
 - title: Solidvest
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era
   image: assets/sbf.png
   template: featurettes
-  link: sbf
+  link: dje-kapital-ag-solidvest
 - title: Thomas Lloyd
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era
   image: assets/auxta.png
   template: featurettes
-  link: auxta
+  link: thomas-lloyd
