--- a/content/work.yaml
+++ b/content/work.yaml
@@ -16,12 +16,12 @@ left:
   description: Blits can power all your company’s internal and external chatbots and voicebots. Offering a no code, drag and drop interface to make creating, comparing and deploying bots across your whole company fast and easy. Compatible with any AI engine, comms channel and connectors to build smart bots that will save your organisation time and resources.
   image: assets/blits.png
   template: featurettes
-  link: blits
+  link: blits-conversational-bots-management-ecosystem
 - title: greenaltas.earth
   description: A complex marketplace for informing, educating, preparing and matching players in the green energy marketplace, as well as providing them with rich data and tools for and beyond the matchmaking.
   image: assets/sbf.png
   template: featurettes
-  link: blits-conversational-bots-management-ecosystem
+  link: green-atlas-earth
 # TODO
 # rename to right: 
 right:
