--- a/content/featurettes/digytle-for-executives.yaml
+++ b/content/featurettes/digytle-for-executives.yaml
@@ -1,9 +1,9 @@
 header:
   image: ../assets/teaching.png
   title:
-    title: Scratch for Executives
+    title: Digytle for Executives
     colour: "#DAA520"
-    description: "Even in the midst of the digital transformation, or better put, especially there, one needs guidance: a light house, or a solid rock. Scratch for Executive helps digital executives to make better sense of the world surrounding them."
+    description: 'The frequently quoted, but seldom understood Agile Manifesto is four lines long, not even four sentences. It begins with: "Individuals and interactions..."''
 sections:
   - section:
     title:
