--- a/content/featurettes/green-atlas-earth.yaml
+++ b/content/featurettes/green-atlas-earth.yaml
@@ -3,7 +3,7 @@ header:
   title:
     title: Green Atlas
     colour: "#EF233C"
-    description: The most innovative approach to site origination and matchmaking in the field of renuable energy.
+    description: The most innovative approach to informing, educating and helping green energy enthusiasts and site owners to evaluate and understand the potential of their sites and engage into viable green energy projects.
 sections:
 - section:
   title:
@@ -28,7 +28,7 @@ sections:
     smallQuotes: ../assets/small_quotes.svg
 - section:
   text:
-  - Green Atlas is relentlessly business and relentlessly green. It is a powerful busienss tool and a powerful tool of ecological transformation.
+  - Green Atlas is relentlessly business and relentlessly green. It is a powerful busienss tool and a powerful tool of ecological transformation. It begins by allowing green enthusiasts to explore renuable options and then helps them transform the dreams into viable projects.
 - section:
   image:
     url: ../assets/book-img.png
