new collage picture

--- a/content/YearSummarised.yaml
+++ b/content/YearSummarised.yaml
@@ -1,5 +1,5 @@
 title: 2020 Summarised
 description: How we successfully pivoted during the pandemic 
-image: assets/2020-collage.png 
+image: assets/yearSummarised.png 
 template: featurettes
 link: 2020
