--- a/content/featurettes/blits-conversational-bots-management-ecosystem.yaml
+++ b/content/featurettes/blits-conversational-bots-management-ecosystem.yaml
@@ -1,14 +1,14 @@
 header:
-  image: ../assets/Caterina_AboutPage.png
+  image: ../assets/blits-featurette.png
   title:
     title: Blits, Conversational Bots Management Ecosystem
-    colour: "#EF233C"
+    colour: "#855c9c"
     description: It is a rare chance and a priviledge to work with a true inventor. Working with Blits you can work with the person who invented it and with the people who built it.
 sections:
 - section:
   title:
     title: The Long Way to Blits
-    colour: "#EF233C"
+    colour: "#855c9c"
 - section:
   text:
   - When T.E. met Len Debets at KPMG in Amsterdam, Len was wearing sneakers in a building full of suits and white collars.
@@ -16,14 +16,14 @@ sections:
 - section:
   title:
     title: A Dream Made True
-    colour: "#EF233C"
+    colour: "#855c9c"
 - section:
   text:
   - Dreams do not come ture, they are made.
   - Blits was dreamt into existance, then developed, spun off and made successful, all by the same people.
 - section:
   quote:
-    colour: "#6E44FF"
+    colour: "#855c9c"
     bigQuotes: ../assets/big_quotes.svg
     text: "I often have long conversations all by myself, and I am so clever that sometimes I don't understand a single word of what I am saying."
     author: "- Oscac Wilde"
@@ -37,11 +37,11 @@ sections:
     url: ../assets/book-img.png
     title: Different is Better than Better
     description: Written like a PhD, the book has the rare power to instruct and convince.
-    colour: "#EF233C"
+    colour: "#855c9c"
 - section:
   title:
     title: Different is Better than Better
-    colour: "#EF233C"
+    colour: "#855c9c"
 - section:
   text:
     - Blits is not only better, it is different.
@@ -51,7 +51,7 @@ sections:
     url: ../assets/the-crew.png
     title: Solid Science
     description: Written like a PhD, the book has the rare power to instruct and convince.
-    colour: "#EF233C"
+    colour: "#855c9c"
 - section:
   text:
     - Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice. Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice.
@@ -63,5 +63,5 @@ action:
     background: 
   buttons:
   - button:
-    link: https://www.amazon.com/Distributed-Leadership-Digital-Innovation-Management/dp/0367361485/ref=sr_1_31?keywords=innovation&qid=1573320208&refinements=p_n_publication_date%3A1250228011&s=books&sr=1-31
-    image: ../assets/amazon.png
+    link: https://calendly.com/
+    image: ../assets/Calendly.png
