--- a/content/work.yaml
+++ b/content/work.yaml
@@ -22,6 +22,11 @@ left:
   image: assets/ga.e.png
   template: featurettes
   link: green-atlas-earth
+- title: Leasingly
+  description: Plug-n-Play Financing Solution.
+  image: assets/ga.e.png
+  template: featurettes
+  link: leasingly
 # TODO
 # rename to right: 
 right:
