--- a/content/featurettes/conversational-bots.yaml
+++ b/content/featurettes/conversational-bots.yaml
@@ -11,19 +11,25 @@ sections:
     colour: "#EF233C"
 - section:
   text:
-  - These words of Andrew Carnegie could not have been more true. The Talent scout T.E. Shaw had wanted to create a company, where he could nurse the scouted talent—for a very long time. But something was missing.
-  - When T.E. Shaw founded Aux in 2013 with 2 partners the workload with his co-founders was distributed in what felt a very natural way, with all major decision making a shared event and then other work distributed in accordance to each partners natural strengths and passions.
-  - This even handed and harmonious partnering style has certainly played a great part in Aux's continuing success and we have never really needed defined C-level roles. So when T.E. Shaw saw the book Distributed Leadership and Digital Innovation, he realised "This is what we have been doing for years!" After reading he was so impressed he made it one of his missions to meet its author Caterina Maniscalco, which he eventually did in early 2020.
-  - With T.E. Shaw being based in Germany with one co-founder in Canada and the other in Bulgaria, Aux had already leaned heavily on technology make those distances feel smaller and woven remote working and collaboration solutions seamlessly into our day to day operations, we are also seeking to improve and expand our offering so are in continuous cycle of Digital Innovation.  
-  - When Charlie Cox and T.E. Shaw co-founded Digytle in London in 2020 it felt only natural that they followed the same distributed route, with this time Aux itself being the third partner, adding British flavour to the Aux family and further developing their UK exposure.
+  - Whether it be qualifying leads, collecting information or directing their visitors to the right part of their website, large corporates saved an average of £300,000 in 2019 by using chatbots within their sales and support teams.  - When T.E. Shaw founded Aux in 2013 with 2 partners the workload with his co-founders was distributed in what felt a very natural way, with all major decision making a shared event and then other work distributed in accordance to each partners natural strengths and passions.
+  - According to a recent business survey most chatbots (41%) are used in a sales function of one form or another and with the speeding up the essential response times by an average of 4x you can see why the business leaders reported an increase in customer satisfaction scores by 24% and an average sales increase of 67%.
+  quote:
+    colour: "#6E44FF"
+    bigQuotes: ../assets/big_quotes.svg
+    text: "26% of all sales in survey started with a chatbot interaction."
+    smallQuotes: ../assets/small_quotes.svg
+- section:
+  title:
+  - If those figures have made automating part or all of your sales and marketing team sound like the way forward the sobering reality is that, across the board, the vast majority of consumers still want to have a human interaction and they attach much greater value to a conversation if they believe they are talking to a 'real' person – even if they are not!
+  - It is for that reason the ultimate accolade within the bot management realm, the mark of excellence, is when the customer cannot tell they are speaking with a bot or that the experience is so seamless they do not care.It might not pass the Turing test but it may convert a browsing bystander into a hot prospect! 
 - section:
   title:
     title: A Seminal Book for Digital Innovators 
     colour: "#EF233C"
 - section:
   text:
-  - So it was his passion for digital innovation and his natural interest in distributed leadership that brought T.E. Shaw to Caterina Maniscalco's book. 
-  - It not only informs, instructs and inspires, but also convinces and is rich in both scientific research and real life examples of distributed leadership giving companies the edge in highly competitive spaces.
+  - Whether it be through clever software or by the diligent training of an experienced sales and marketing team, the power of a bot is only reached through optimisation. The greater the optimisation, the greater the result.
+  - A lot of this optimisation is in the form training and learnings but as more vendors and platforms have come to market, more choice has been given to optimise your offering by cherry picking the best Natural Language Processing (NLP) engines and optimising them dependent on local language or industry segment served
 - section:
   quote:
     colour: "#6E44FF"
@@ -32,8 +38,8 @@ sections:
     smallQuotes: ../assets/small_quotes.svg
 - section:
   text:
-  - Reading it, T.E. felt many direct comparisons to his journey with Aux and Digytle, reinforcing all the benefits he had found working in close partnerships with shared roles and distant locations.
-  - Thomas, maybe an example of a lesson learned from book or your experience of dist lead.
+  - Digytle is fortunate enough to have Blits.ai as a sister company within its Aux family and we are delighted to announce ourselves as their UK partners and suppliers.(better word?!) and look forward to bringing their exciting chat and voice bot management and optimisation platform to the UK market and beyond.
+  - What sets Blits apart? Blah blah
 - section:
   image:
     url: ../assets/book-img.png
@@ -46,8 +52,8 @@ sections:
     colour: "#EF233C"
 - section:
   text:
-    - Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice 
-    - Caterina is one of our Digytle Partners, our highly specialised assemble of digital leaders and innovators as well as trusted partner organisations.
+    - Whys is NLP so important? Blah blah
+    - (button at bottom takes to Blits internal page)
 - section:
   imageWide:
     url: ../assets/the-crew.png
