--- a/content/featurettes/conversational-bots.yaml
+++ b/content/featurettes/conversational-bots.yaml
@@ -19,23 +19,15 @@ sections:
     text: "26% of all sales in survey started with a chatbot interaction."
     smallQuotes: ../assets/small_quotes.svg
 - section:
-  title:
+  text:
   - If those figures have made automating part or all of your sales and marketing team sound like the way forward the sobering reality is that, across the board, the vast majority of consumers still want to have a human interaction and they attach much greater value to a conversation if they believe they are talking to a 'real' person – even if they are not!
   - It is for that reason the ultimate accolade within the bot management realm, the mark of excellence, is when the customer cannot tell they are speaking with a bot or that the experience is so seamless they do not care.It might not pass the Turing test but it may convert a browsing bystander into a hot prospect! 
-- section:
-  title:
-    title: A Seminal Book for Digital Innovators 
-    colour: "#EF233C"
-- section:
-  text:
   - Whether it be through clever software or by the diligent training of an experienced sales and marketing team, the power of a bot is only reached through optimisation. The greater the optimisation, the greater the result.
   - A lot of this optimisation is in the form training and learnings but as more vendors and platforms have come to market, more choice has been given to optimise your offering by cherry picking the best Natural Language Processing (NLP) engines and optimising them dependent on local language or industry segment served
 - section:
-  quote:
-    colour: "#6E44FF"
-    bigQuotes: ../assets/big_quotes.svg
-    text: "No man will make a great leader who wants to do it all himself, or to get all the credit for doing it."
-    smallQuotes: ../assets/small_quotes.svg
+  title:
+    title: Aux and Digytle, Ahead of Our Time
+    colour: "#EF233C"
 - section:
   text:
   - Digytle is fortunate enough to have Blits.ai as a sister company within its Aux family and we are delighted to announce ourselves as their UK partners and suppliers.(better word?!) and look forward to bringing their exciting chat and voice bot management and optimisation platform to the UK market and beyond.
@@ -48,7 +40,7 @@ sections:
     colour: "#EF233C"
 - section:
   title:
-    title: Caterina Maniscalco
+    title: Aux and Digytle, Ahead of Our Time
     colour: "#EF233C"
 - section:
   text:
