--- a/content/featurettes/conversational-bots.yaml
+++ b/content/featurettes/conversational-bots.yaml
@@ -11,7 +11,7 @@ sections:
     colour: "#EF233C"
 - section:
   text:
-  - Whether it be qualifying leads, collecting information or directing their visitors to the right part of their website, large corporates saved an average of £300,000 in 2019 by using chatbots within their sales and support teams.  - When T.E. Shaw founded Aux in 2013 with 2 partners the workload with his co-founders was distributed in what felt a very natural way, with all major decision making a shared event and then other work distributed in accordance to each partners natural strengths and passions.
+  - Whether it be qualifying leads, collecting information or directing their visitors to the right part of their website, large corporates saved an average of £300,000 in 2019 by using chatbots within their sales and support teams.    
   - According to a recent business survey most chatbots (41%) are used in a sales function of one form or another and with the speeding up the essential response times by an average of 4x you can see why the business leaders reported an increase in customer satisfaction scores by 24% and an average sales increase of 67%.
   quote:
     colour: "#6E44FF"
