--- a/content/featurettes/conversational-bots.yaml
+++ b/content/featurettes/conversational-bots.yaml
@@ -3,7 +3,7 @@ header:
   title:
     title: Conversational Chatbots
     colour: "#EF233C"
-    description: We at Digytle and Aux are not only experts in Conversational Chatbots, we literally invet and build them for scratch.
+    description: Here at Digytle we are not only experts in Conversational Chatbots, we literally invent and build them for scratch.
 sections:
 - section:
   title:
