--- a/content/featurettes/automation-of-quality.yaml
+++ b/content/featurettes/automation-of-quality.yaml
@@ -1,5 +1,5 @@
 header:
-  image: ../assets/Caterina_AboutPage.png
+  image: ../assets/Test.automation.png
   title:
     title: Automation of Quality, Functional and Compliance
     colour: "#EF233C"
