--- a/content/work.yaml
+++ b/content/work.yaml
@@ -24,7 +24,7 @@ left:
   link: green-atlas-earth
 - title: Leasingly
   description: Plug-n-Play Financing Solution.
-  image: assets/ga.e.png
+  image: assets/leasingly.png
   template: featurettes
   link: leasingly
 # TODO
