--- a/content/work.yaml
+++ b/content/work.yaml
@@ -2,8 +2,8 @@ title: Latest Work
 # TODO
 # rename to big:
 big:
-- title: AUXTA Testing Automation
-  description: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform tens of thousands of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA also performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
+- title: Automation of Quality
+  description: AUXTA delivery peace of mind through in-depth monitoring and compliance conformity. AUXTA perform millions of steps every hour, imitating human visitors, and comparing the result to fixed or dynamic values. AUXTA also performs compliance supervision such as European Securities and Markets Authority (ESMA) compliant monitoring.
   image: assets/blits.bot.png
   # TODO
   # remove
@@ -12,35 +12,35 @@ big:
 # TODO
 # rename to left: and see why does it repeat
 left:
-- title: Blits.ai
-  description: Blits can power all your company’s internal and external chatbots and voicebots. Offering a no code, drag and drop interface to make creating, comparing and deploying bots across your whole company fast and easy. Compatible with any AI engine, comms channel and connectors to build smart bots that will save your organisation time and resources.
+- title: Conversational Chatbots Management
+  description: Blits powers all your company’s internal and external chatbots and voicebots. Offering a no code, drag and drop interface to make creating, comparing and deploying bots across your whole company fast and easy. Compatible with any AI engine, comms channel and connectors to build smart bots that will save your organisation time and resources.
   image: assets/blits-ai.png
   template: featurettes
   link: blits-conversational-bots-management-ecosystem
-- title: greenaltas.earth
-  description: A complex marketplace for informing, educating, preparing and matching players in the green energy marketplace, as well as providing them with rich data and tools for and beyond the matchmaking.
+- title: Renewable Energy Assisted Marketplace
+  description: greenaltas.earth is an assisted marketplace informing, educating, preparing and matching site owners and project developers in the green energy marketplace, as well as providing them with rich data and tools for and beyond the matchmaking.
   image: assets/ga.e.png
   template: featurettes
   link: green-atlas-earth
-- title: Leasingly
-  description: Plug-n-Play Financing Solution.
+- title: Plug-n-Play Financing Solution
+  description: Leasingly allows small and large merchants to provide their customers with a point of sale financing. The solution is plug-and-play and can be purchased as a SaaS or on premise. A configurator allows a complete replication of the merchant's business processes and pricing logic.
   image: assets/leasingly.png
   template: featurettes
   link: leasingly
 # TODO
 # rename to right: 
 right:
-- title: Stichting Bedrijfsfinanciering
-  description: A complex marketplace for informing, educating SMES, and helping them prepare and choose a financing product.
+- title: SME Re-Financing and Discovery Marketplace
+  description: A complex marketplace for informing, educating, and helping SMEs discover, prepare and choose a re-financing soluion as well as other innovative finanance, income and employee retention solutions.
   image: assets/stichting.png
   template: featurettes
   link: stichting-bedrijfsfinanciering
-- title: Solidvest
+- title: Digytising a 40-Years-Old German Investment Fund 
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era
   image: assets/solidvest.png
   template: featurettes
   link: dje-kapital-ag-solidvest
-- title: Thomas Lloyd
+- title: Digytising an International Investment Fund
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era
   image: assets/thomas-lloyd.png
   template: featurettes
