--- a/content/header.yaml
+++ b/content/header.yaml
@@ -1,5 +1,5 @@
 text: Digital Products, Transformation and Design
-description: Trusted development using disruptive technologies. We blend the best of the new with many years of experience to help you transform your offering and launch new products. Digytle helps you harness and adopt the best technologies to transform your business's processes and services. To digitally transform means a paradigm shift, organisational change and market repositioning. Digytle can help you achieve all three.
+description: Trusted development using disruptive technologies. We blend the best of the new with many years of experience to help you transform your offering and launch new projects. Digytle helps you harness and adopt the best technologies to transform your business's processes, products and services. 
 button: Learn more
 image: assets/rocket.new.png
 colour: "#d52685"
