social media cards and images rework

--- a/content/footer.yaml
+++ b/content/footer.yaml
@@ -1,6 +1,6 @@
 logo: /assets/logo.new.png
 location: /assets/location-point.svg
-address: 241 Hertingfordbury Road, Hertingfordbury, SG14 2LB
+address: 27 Old Gloucester Street, London, WC1N 3AX
 contactsImage: /assets/contacts.svg
 contacts: 
 - cc@digytle.com
