--- a/content/header.yaml
+++ b/content/header.yaml
@@ -2,4 +2,4 @@ text: Digital Products, Transformation and Design
 description: Trusted development using disruptive technologies. We blend the best of the new with many years of experience to help you transform your offering and launch new projects. Digytle helps you harness and adopt the best technologies to transform your business's processes, products and services. 
 button: Learn more
 image: assets/rocket.new.png
-colour: "#d52685"
+colour: "#e42d90"
